# sunthemes

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.ru.md  ThemeSwitcher.spec  build.bat  generate_icon.py  install.bat  installer.iss  pyproject.toml  requirements.txt  run.bat  sunthemes.spec  theme_switcher.py
.github/workflows/: release.yml
packaging/: entry.py
src/sunthemes/: __init__.py  __main__.py  app.py  config.py  i18n.py  suncalc.py  ui.py  winapi.py
tests/: test_config.py  test_i18n.py  test_suncalc.py  test_winapi.py
