[project]
name = "sunthemes"
version = "1.0.0"
description = "Automatic Windows light/dark theme switching by sunrise, sunset and real daylight"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Small-coder-AI" }]
keywords = ["windows", "dark-mode", "theme", "sunrise", "sunset"]
dependencies = [
    "PySide6>=6.6",
    "astral>=3.2",
]

[project.urls]
Homepage = "https://github.com/Small-coder-AI/sunthemes"
Issues = "https://github.com/Small-coder-AI/sunthemes/issues"

[project.gui-scripts]
sunthemes = "sunthemes.app:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunthemes"]
